--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container container1">
       <div class="jumbotron">
         <h1 class="h1index">Prashanth R</h1>
-        <p class="pindex">Full Stack Developer</p>
+        <p class="pindex">Data Scientist / Machine Learning Engineer (MLOps NLP)</p>
         <img class="indeximg" src="images/land.svg" alt="bg-img">
       </div>
     </div>
